// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RP-11 golden net — IR → MJML (email-safe fixtures) > buttons → mjml 1`] = `
"<mjml>
  <mj-head>
    <mj-attributes>
      <mj-all font-family="Helvetica, Arial, sans-serif" />
    </mj-attributes>
  </mj-head>
  <mj-body background-color="#f3f4f6">
    <mj-section background-color="#ffffff" padding="0 24px 24px">
      <mj-column>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="#4f46e5" color="#ffffff">Save</mj-button>
      </mj-column>
      <mj-column>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="transparent" color="#4f46e5" border="1px solid #4f46e5">Cancel</mj-button>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`RP-11 golden net — IR → MJML (email-safe fixtures) > images → mjml 1`] = `
"<mjml>
  <mj-head>
    <mj-attributes>
      <mj-all font-family="Helvetica, Arial, sans-serif" />
    </mj-attributes>
  </mj-head>
  <mj-body background-color="#f3f4f6">
    <mj-section background-color="#ffffff" padding="24px 24px 16px">
      <mj-column>
        <mj-image src="https://cdn.example.com/banner.png" alt="Sized banner" width="320px" border-radius="12px" padding="0" />
        <mj-image src="https://cdn.example.com/banner.png" alt="Fluid banner" border-radius="12px" padding="0" />
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`RP-11 golden net — IR → MJML (email-safe fixtures) > row-fill → mjml 1`] = `
"<mjml>
  <mj-head>
    <mj-attributes>
      <mj-all font-family="Helvetica, Arial, sans-serif" />
    </mj-attributes>
  </mj-head>
  <mj-body background-color="#f3f4f6">
    <mj-section background-color="#ffffff" padding="0 24px 24px">
      <mj-column>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="#4f46e5" color="#ffffff">A</mj-button>
      </mj-column>
      <mj-column>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="transparent" color="#4f46e5" border="1px solid #4f46e5">B</mj-button>
      </mj-column>
      <mj-column>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="#4f46e5" color="#ffffff">C</mj-button>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`RP-11 golden net — IR → MJML (email-safe fixtures) > row-fit-justify → mjml 1`] = `
"<mjml>
  <mj-head>
    <mj-attributes>
      <mj-all font-family="Helvetica, Arial, sans-serif" />
    </mj-attributes>
  </mj-head>
  <mj-body background-color="#f3f4f6">
    <mj-section background-color="#ffffff" padding="0 24px 24px">
      <mj-column>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="#4f46e5" color="#ffffff">Left</mj-button>
      </mj-column>
      <mj-column>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="transparent" color="#4f46e5" border="1px solid #4f46e5">Right</mj-button>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`RP-11 golden net — IR → MJML (email-safe fixtures) > stack-flow-styled → mjml 1`] = `
"<mjml>
  <mj-head>
    <mj-attributes>
      <mj-all font-family="Helvetica, Arial, sans-serif" />
    </mj-attributes>
  </mj-head>
  <mj-body background-color="#f3f4f6">
    <mj-section background-color="#ffffff" padding="24px 24px 16px">
      <mj-column>
        <mj-text font-family="Helvetica, Arial, sans-serif" font-size="24px" line-height="1.25" font-weight="700" color="#111827" padding="0">Title</mj-text>
        <mj-text font-family="Helvetica, Arial, sans-serif" font-size="16px" line-height="1.5" font-weight="400" color="#111827" padding="0">Subtitle</mj-text>
        <mj-button href="#" font-family="Helvetica, Arial, sans-serif" font-size="16px" font-weight="600" border-radius="12px" inner-padding="8px 16px" align="left" background-color="#4f46e5" color="#ffffff">Go</mj-button>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`RP-11 golden net — IR → MJML (email-safe fixtures) > text-variants → mjml 1`] = `
"<mjml>
  <mj-head>
    <mj-attributes>
      <mj-all font-family="Helvetica, Arial, sans-serif" />
    </mj-attributes>
  </mj-head>
  <mj-body background-color="#f3f4f6">
    <mj-section background-color="#ffffff" padding="24px 24px 16px">
      <mj-column>
        <mj-text font-family="Helvetica, Arial, sans-serif" font-size="24px" line-height="1.25" font-weight="700" color="#111827" padding="0">Heading</mj-text>
        <mj-text font-family="Helvetica, Arial, sans-serif" font-size="16px" line-height="1.5" font-weight="400" color="#111827" padding="0">Body copy goes here.</mj-text>
      </mj-column>
    </mj-section>
  </mj-body>
</mjml>
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > align-wrap-matrix → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column; gap:var(--space-sm)">
      <div style="display:flex; flex-direction:column; align-items:flex-start; flex-wrap:nowrap">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">start</a>
      </div>
      <div style="display:flex; flex-direction:column; align-items:center">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">center</a>
      </div>
      <div style="display:flex; flex-direction:column; align-items:flex-end">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">end</a>
      </div>
      <div style="display:flex; flex-direction:column; align-items:stretch; flex-wrap:wrap">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">stretch</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">wrap</a>
      </div>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > align-wrap-matrix → html 1`] = `"<div style="display:flex; flex-direction:column; gap:var(--space-sm)"><div style="display:flex; flex-direction:column; align-items:flex-start; flex-wrap:nowrap"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">start</a></div><div style="display:flex; flex-direction:column; align-items:center"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">center</a></div><div style="display:flex; flex-direction:column; align-items:flex-end"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">end</a></div><div style="display:flex; flex-direction:column; align-items:stretch; flex-wrap:wrap"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">stretch</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">wrap</a></div></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > align-wrap-matrix → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column', gap: 'var(--space-sm)' }}>
      <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'flex-start', flexWrap: 'nowrap' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>start</a>
      </div>
      <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'center' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>center</a>
      </div>
      <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'flex-end' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>end</a>
      </div>
      <div style={{ display: 'flex', flexDirection: 'column', alignItems: 'stretch', flexWrap: 'wrap' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>stretch</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>wrap</a>
      </div>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > buttons → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column">
      <div style="display:flex; flex-direction:row; gap:var(--space-md)">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Save</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">Cancel</a>
      </div>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > buttons → html 1`] = `"<div style="display:flex; flex-direction:column"><div style="display:flex; flex-direction:row; gap:var(--space-md)"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Save</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">Cancel</a></div></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > buttons → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column' }}>
      <div style={{ display: 'flex', flexDirection: 'row', gap: 'var(--space-md)' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>Save</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>Cancel</a>
      </div>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > column-wrap → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column; justify-content:flex-end; align-items:center; flex-wrap:wrap; gap:var(--space-sm)">
      <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">A</a>
      <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">B</a>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > column-wrap → html 1`] = `"<div style="display:flex; flex-direction:column; justify-content:flex-end; align-items:center; flex-wrap:wrap; gap:var(--space-sm)"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">A</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">B</a></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > column-wrap → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column', justifyContent: 'flex-end', alignItems: 'center', flexWrap: 'wrap', gap: 'var(--space-sm)' }}>
      <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>A</a>
      <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>B</a>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > grid → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:grid; grid-template-columns:repeat(3, 1fr); justify-content:center; align-items:flex-end; gap:var(--space-md); padding:var(--space-lg)">
      <p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">One</p>
      <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Two</a>
      <img src="https://cdn.example.com/banner.png" alt="Three" style="display:block; width:100%; max-width:80px; height:auto; border-radius:var(--radius-lg)">
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > grid → html 1`] = `"<div style="display:grid; grid-template-columns:repeat(3, 1fr); justify-content:center; align-items:flex-end; gap:var(--space-md); padding:var(--space-lg)"><p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">One</p><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Two</a><img src="https://cdn.example.com/banner.png" alt="Three" style="display:block; width:100%; max-width:80px; height:auto; border-radius:var(--radius-lg)"></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > grid → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'grid', gridTemplateColumns: 'repeat(3, 1fr)', justifyContent: 'center', alignItems: 'flex-end', gap: 'var(--space-md)', padding: 'var(--space-lg)' }}>
      <p style={{ margin: '0', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', lineHeight: 'var(--font-line)', color: 'var(--color-text)' }}>One</p>
      <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>Two</a>
      <img src="https://cdn.example.com/banner.png" alt="Three" style={{ display: 'block', width: '100%', maxWidth: '80px', height: 'auto', borderRadius: 'var(--radius-lg)' }} />
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > images → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column; gap:var(--space-md)">
      <img src="https://cdn.example.com/banner.png" alt="Sized banner" style="display:block; width:100%; max-width:320px; height:auto; border-radius:var(--radius-lg)">
      <img src="https://cdn.example.com/banner.png" alt="Fluid banner" style="display:block; width:100%; height:auto; border-radius:var(--radius-lg)">
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > images → html 1`] = `"<div style="display:flex; flex-direction:column; gap:var(--space-md)"><img src="https://cdn.example.com/banner.png" alt="Sized banner" style="display:block; width:100%; max-width:320px; height:auto; border-radius:var(--radius-lg)"><img src="https://cdn.example.com/banner.png" alt="Fluid banner" style="display:block; width:100%; height:auto; border-radius:var(--radius-lg)"></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > images → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column', gap: 'var(--space-md)' }}>
      <img src="https://cdn.example.com/banner.png" alt="Sized banner" style={{ display: 'block', width: '100%', maxWidth: '320px', height: 'auto', borderRadius: 'var(--radius-lg)' }} />
      <img src="https://cdn.example.com/banner.png" alt="Fluid banner" style={{ display: 'block', width: '100%', height: 'auto', borderRadius: 'var(--radius-lg)' }} />
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > justify-matrix → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column; gap:var(--space-sm)">
      <div style="display:flex; flex-direction:row; justify-content:flex-start">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">start</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a>
      </div>
      <div style="display:flex; flex-direction:row; justify-content:center">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">center</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a>
      </div>
      <div style="display:flex; flex-direction:row; justify-content:flex-end">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">end</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a>
      </div>
      <div style="display:flex; flex-direction:row; justify-content:space-between">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">space-between</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a>
      </div>
      <div style="display:flex; flex-direction:row; justify-content:space-around">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">space-around</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a>
      </div>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > justify-matrix → html 1`] = `"<div style="display:flex; flex-direction:column; gap:var(--space-sm)"><div style="display:flex; flex-direction:row; justify-content:flex-start"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">start</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a></div><div style="display:flex; flex-direction:row; justify-content:center"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">center</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a></div><div style="display:flex; flex-direction:row; justify-content:flex-end"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">end</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a></div><div style="display:flex; flex-direction:row; justify-content:space-between"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">space-between</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a></div><div style="display:flex; flex-direction:row; justify-content:space-around"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">space-around</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">x</a></div></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > justify-matrix → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column', gap: 'var(--space-sm)' }}>
      <div style={{ display: 'flex', flexDirection: 'row', justifyContent: 'flex-start' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>start</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>x</a>
      </div>
      <div style={{ display: 'flex', flexDirection: 'row', justifyContent: 'center' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>center</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>x</a>
      </div>
      <div style={{ display: 'flex', flexDirection: 'row', justifyContent: 'flex-end' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>end</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>x</a>
      </div>
      <div style={{ display: 'flex', flexDirection: 'row', justifyContent: 'space-between' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>space-between</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>x</a>
      </div>
      <div style={{ display: 'flex', flexDirection: 'row', justifyContent: 'space-around' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>space-around</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>x</a>
      </div>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > nested-deep → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column; background:var(--color-surface); padding:var(--space-lg); gap:var(--space-md)">
      <div style="display:flex; flex-direction:row; gap:var(--space-md)">
        <div style="display:flex; flex-direction:column; gap:var(--space-sm)">
          <h2 style="margin:0; font-family:var(--font-family); font-size:var(--font-h2); line-height:1.25; color:var(--color-text); font-weight:700">Col head</h2>
          <p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">col body</p>
        </div>
        <div style="display:grid; grid-template-columns:repeat(2, 1fr); gap:var(--space-sm)">
          <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">x</a>
          <img src="https://cdn.example.com/banner.png" alt="thumb" style="display:block; width:100%; max-width:60px; height:auto; border-radius:var(--radius-lg)">
        </div>
      </div>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > nested-deep → html 1`] = `"<div style="display:flex; flex-direction:column; background:var(--color-surface); padding:var(--space-lg); gap:var(--space-md)"><div style="display:flex; flex-direction:row; gap:var(--space-md)"><div style="display:flex; flex-direction:column; gap:var(--space-sm)"><h2 style="margin:0; font-family:var(--font-family); font-size:var(--font-h2); line-height:1.25; color:var(--color-text); font-weight:700">Col head</h2><p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">col body</p></div><div style="display:grid; grid-template-columns:repeat(2, 1fr); gap:var(--space-sm)"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">x</a><img src="https://cdn.example.com/banner.png" alt="thumb" style="display:block; width:100%; max-width:60px; height:auto; border-radius:var(--radius-lg)"></div></div></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > nested-deep → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column', background: 'var(--color-surface)', padding: 'var(--space-lg)', gap: 'var(--space-md)' }}>
      <div style={{ display: 'flex', flexDirection: 'row', gap: 'var(--space-md)' }}>
        <div style={{ display: 'flex', flexDirection: 'column', gap: 'var(--space-sm)' }}>
          <h2 style={{ margin: '0', fontFamily: 'var(--font-family)', fontSize: 'var(--font-h2)', lineHeight: '1.25', color: 'var(--color-text)', fontWeight: '700' }}>Col head</h2>
          <p style={{ margin: '0', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', lineHeight: 'var(--font-line)', color: 'var(--color-text)' }}>col body</p>
        </div>
        <div style={{ display: 'grid', gridTemplateColumns: 'repeat(2, 1fr)', gap: 'var(--space-sm)' }}>
          <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>x</a>
          <img src="https://cdn.example.com/banner.png" alt="thumb" style={{ display: 'block', width: '100%', maxWidth: '60px', height: 'auto', borderRadius: 'var(--radius-lg)' }} />
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > row-fill → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column">
      <div style="display:flex; flex-direction:row; gap:var(--space-sm)">
        <div style="flex:1">
          <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">A</a>
        </div>
        <div style="flex:1">
          <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">B</a>
        </div>
        <div style="flex:1">
          <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">C</a>
        </div>
      </div>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > row-fill → html 1`] = `"<div style="display:flex; flex-direction:column"><div style="display:flex; flex-direction:row; gap:var(--space-sm)"><div style="flex:1"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">A</a></div><div style="flex:1"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">B</a></div><div style="flex:1"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">C</a></div></div></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > row-fill → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column' }}>
      <div style={{ display: 'flex', flexDirection: 'row', gap: 'var(--space-sm)' }}>
        <div style={{ flex: 1 }}>
          <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>A</a>
        </div>
        <div style={{ flex: 1 }}>
          <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>B</a>
        </div>
        <div style={{ flex: 1 }}>
          <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>C</a>
        </div>
      </div>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > row-fit-justify → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column">
      <div style="display:flex; flex-direction:row; justify-content:space-between; align-items:center; gap:var(--space-md)">
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Left</a>
        <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">Right</a>
      </div>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > row-fit-justify → html 1`] = `"<div style="display:flex; flex-direction:column"><div style="display:flex; flex-direction:row; justify-content:space-between; align-items:center; gap:var(--space-md)"><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Left</a><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:transparent; color:var(--color-brand); border:1px solid var(--color-brand)">Right</a></div></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > row-fit-justify → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column' }}>
      <div style={{ display: 'flex', flexDirection: 'row', justifyContent: 'space-between', alignItems: 'center', gap: 'var(--space-md)' }}>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>Left</a>
        <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'transparent', color: 'var(--color-brand)', border: '1px solid var(--color-brand)' }}>Right</a>
      </div>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > stack-flow-styled → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column; justify-content:center; align-items:stretch; background:var(--color-surface); padding:var(--space-lg); border-radius:var(--radius-lg); gap:var(--space-md)">
      <h2 style="margin:0; font-family:var(--font-family); font-size:var(--font-h2); line-height:1.25; color:var(--color-text); font-weight:700">Title</h2>
      <p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">Subtitle</p>
      <a style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Go</a>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > stack-flow-styled → html 1`] = `"<div style="display:flex; flex-direction:column; justify-content:center; align-items:stretch; background:var(--color-surface); padding:var(--space-lg); border-radius:var(--radius-lg); gap:var(--space-md)"><h2 style="margin:0; font-family:var(--font-family); font-size:var(--font-h2); line-height:1.25; color:var(--color-text); font-weight:700">Title</h2><p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">Subtitle</p><a href="#" style="display:inline-block; text-align:center; text-decoration:none; padding:var(--space-sm) var(--space-md); border-radius:var(--radius-lg); font-family:var(--font-family); font-size:var(--font-body); font-weight:600; background:var(--color-brand); color:var(--color-on-brand)">Go</a></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > stack-flow-styled → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column', justifyContent: 'center', alignItems: 'stretch', background: 'var(--color-surface)', padding: 'var(--space-lg)', borderRadius: 'var(--radius-lg)', gap: 'var(--space-md)' }}>
      <h2 style={{ margin: '0', fontFamily: 'var(--font-family)', fontSize: 'var(--font-h2)', lineHeight: '1.25', color: 'var(--color-text)', fontWeight: '700' }}>Title</h2>
      <p style={{ margin: '0', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', lineHeight: 'var(--font-line)', color: 'var(--color-text)' }}>Subtitle</p>
      <a href="#" style={{ display: 'inline-block', textAlign: 'center', textDecoration: 'none', padding: 'var(--space-sm) var(--space-md)', borderRadius: 'var(--radius-lg)', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', fontWeight: '600', background: 'var(--color-brand)', color: 'var(--color-on-brand)' }}>Go</a>
    </div>
  );
}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > text-variants → angular 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
// One standalone Angular component mirroring the web markup.
import { Component, ChangeDetectionStrategy } from '@angular/core';

@Component({
  selector: 'ed-card',
  changeDetection: ChangeDetectionStrategy.OnPush,
  template: \`
    <div style="display:flex; flex-direction:column; background:var(--color-surface); padding:var(--space-lg); gap:var(--space-md)">
      <h2 style="margin:0; font-family:var(--font-family); font-size:var(--font-h2); line-height:1.25; color:var(--color-text); font-weight:700">Heading</h2>
      <p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">Body copy goes here.</p>
    </div>
  \`,
})
export class CardComponent {}
"
`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > text-variants → html 1`] = `"<div style="display:flex; flex-direction:column; background:var(--color-surface); padding:var(--space-lg); gap:var(--space-md)"><h2 style="margin:0; font-family:var(--font-family); font-size:var(--font-h2); line-height:1.25; color:var(--color-text); font-weight:700">Heading</h2><p style="margin:0; font-family:var(--font-family); font-size:var(--font-body); line-height:var(--font-line); color:var(--color-text)">Body copy goes here.</p></div>"`;

exports[`RP-11 golden net — IR → web targets (full IR vocabulary) > text-variants → react 1`] = `
"// AUTO-GENERATED by EasyDesign — do not edit by hand.
import * as React from 'react';

export default function Card(): React.ReactElement {
  return (
    <div style={{ display: 'flex', flexDirection: 'column', background: 'var(--color-surface)', padding: 'var(--space-lg)', gap: 'var(--space-md)' }}>
      <h2 style={{ margin: '0', fontFamily: 'var(--font-family)', fontSize: 'var(--font-h2)', lineHeight: '1.25', color: 'var(--color-text)', fontWeight: '700' }}>Heading</h2>
      <p style={{ margin: '0', fontFamily: 'var(--font-family)', fontSize: 'var(--font-body)', lineHeight: 'var(--font-line)', color: 'var(--color-text)' }}>Body copy goes here.</p>
    </div>
  );
}
"
`;
